objects/ASI_CRM_CN_AccountGradingSetting__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_OnOff__c</fullName>
        <label>On / Off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_QtyFrom__c</fullName>
        <label>Qty From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_QtyTo__c</fullName>
        <label>Qty To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Grading Setting</label>
    <listViews>
        <fullName>ASI_CRM_CN_Account_Grading_setting</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_OnOff__c</columns>
        <columns>ASI_CRM_CN_QtyFrom__c</columns>
        <columns>ASI_CRM_CN_QtyTo__c</columns>
        <columns>ASI_CRM_CN_Grade__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_AccountGradingSetting__c.ASI_CRM_CN_AccountGradingSetting_RcrdTyp</value>
        </filters>
        <label>CN Account Grading setting</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AG-{00000}</displayFormat>
        <label>Account Grading Setting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Grading Setting</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_AccountGradingSetting_RcrdTyp</fullName>
        <active>true</active>
        <label>ASI_CRM_CN Account Grading Setting</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>